# whereisswot

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  checking_times.ipynb  pyproject.toml  requirements.txt  testing_map.ipynb  tools.py  update_requirements.py
docs/: index.html
templates/: index.html  map.html
