[project]
authors = [{name = "iury Simoes-Sousa", email = "iuryt@pm.me"}]
name = "whereisswot"
requires-python = ">= 3.11"
version = "0.1.0"
license = "MIT"
description = "Web app to visualize and track SWOT satellite passings."

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
start = "python app.py"
update-requirements = "python update_requirements.py"

[tool.pixi.dependencies]
flask = ">=3.0.3,<4"
folium = ">=0.17.0,<0.18"
geopandas = ">=1.0.1,<2"
gunicorn = ">=23.0.0,<24"
pandas = ">=2.2.3,<3"
numpy = ">=2.0.2,<3"
matplotlib = ">=3.9.2,<4"
mapclassify = ">=2.8.1,<3"
shapely = ">=2.0.6,<3"
pyproj = ">=3.6.1,<4"
pip = ">=24.0"
